# deep-insight

./: .gitignore  README.md  deep-insight.session.sql  docker-compose.yaml  package-lock.json  package.json
.cursor/: common.mdc
backend/: BUSINESS_SEEDING_API.md  README.md  __init__.py  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 210e5e270f26_add_timestamps.py  61e40f013d06_add_employeeid_to_interview.py  a76c22eeaf1e_add_employee_id_to_interviews.py  afc7593247d4_question_order_index.py  df0dfffeea17_initial_model.py
backend/app/: __init__.py  db.py  deep_insight_client_README.md  default_business_seed.json  example_business_seed.json  main.py
backend/app/agents/: chain.py
backend/app/agents/drafts/deepagents/: deep_system.py
backend/app/agents/drafts/simple/: system.py  wiki_agent.py
backend/app/agents/old/deepagents/: deep_wiki_agent.py
backend/app/agents/prompts/: plan_doc_sections.py  system.py  write_doc.py
backend/app/controllers/: business_controller.py  employee_controller.py  interview_controller.py  question_controller.py  response_controller.py
backend/app/controllers/procedures/: answer_question_controller.py  build_wiki_controller.py  next_question_controller.py  simulate_interview_controller.py  start_interview_controller.py
backend/app/models/: models.py
backend/app/services/: answer_question_service.py  build_wiki_service.py  interview_service.py  mkdocs_service.py  next_question_service.py  simulate_interview_service.py  start_interview_service.py
backend/app/services/schemas/: schema.py
backend/scripts/: save_api_schema.py
backend/tests/: README.md  conftest.py  mock_data.yaml
backend/tests/live/: __init__.py  test_full_interview_flow.py  test_live_example.py  test_simulate_interview.py
backend/tests/unit/: test_employee_crud.py
docs/: mkdocs.yml  requirements-docs.txt
frontend/: package-lock.json  package.json
frontend/src/app/: DeepInsightLogo.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/businesses/: CreateBusinessModal.tsx  page.tsx
frontend/src/app/businesses/[business_id]/: StartInterviewsModal.tsx  page.tsx
frontend/src/app/businesses/[business_id]/interview/: BuildWikiLoadingModal.tsx  page.tsx
frontend/src/app/businesses/[business_id]/interview/[interview_id]/employee/[employee_id]/: PromptInput.tsx  page.tsx
frontend/src/app/businesses/[business_id]/interview/start/: page.tsx
frontend/src/app/businesses/[business_id]/interviews/: page.tsx
frontend/src/components/: AddEmployeeModal.tsx  AddQuestionModal.tsx  ConfirmDelete.tsx
frontend/src/components/ui/shadcn-io/ai/: input.tsx
frontend/src/lib/: api.ts
