[project]
name = "deep-insight-backend"
version = "0.1.0"
description = "FastAPI backend for Deep Insight"
authors = [
    {name = "Andrew Melbourne",email = "melbourneandrew@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "psycopg[binary] (>=3.1.18,<4.0.0)"
]

[tool.poetry.scripts]
backend = "app.main:app"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

