[project]
name = "deep-insight-backend"
version = "0.1.0"
description = "FastAPI backend for Deep Insight"
authors = [
    {name = "Andrew Melbourne",email = "melbourneandrew@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "psycopg[binary] (>=3.1.18,<4.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-asyncio (>=0.23.0,<1.0.0)",
    "httpx (>=0.27.0,<1.0.0)",
    "py-pglite[sqlalchemy] (>=0.4.1,<1.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "litellm (>=1.75.5.post1,<2.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "deep-insight-client @ file:///Users/adamkahn/deep-insight/deep-insight-client"
]

[tool.poetry.scripts]
backend = "app.main:app"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = ["-v"]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

